[package]
name = "nips"
version = "0.0.37"
edition = "2021"
authors = ["randymcmillan <randymcmillan@protonmail.com>", "The nostr-protocol/nips Contributors"]
repository = "https://github.com/gnostr-org/gnostr-nips.git"
homepage = "https://github.com/gnostr-org/gnostr-nips"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
clap = { version = "4.4", features = ["derive"] }
pulldown-cmark = "0.13.0"
rust-embed = { version = "8.6.0", features = ["debug-embed", "include-exclude"] }
termimad = "0.31.2"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
mime_guess = "2.0.5"
bytes = "1.10.1"
tower = { version = "0.5.2", features = ["full"] }
tower-http = { version = "0.6.2", features = ["full"] }

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
