[package]
name = "make-just"
version = "0.0.11"
edition = "2021"
authors = ["randymcmillan <randymcmillan@protonmail.com>"]
repository = "https://github.com/randymcmillan/make-just.git"
homepage = "https://github.com/randymcmillan/make-just"
description = "generate a justfile config"

[dependencies]
rust-embed = { version = "8.6.0", features = ["debug-embed", "include-exclude"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
